2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Describe-Compute): Fix Packet struct to use
	constraint.
	(Commands and Dot-Commands): Use `expression` and `function`
	sub-cmd of `.vm disassemble`.
	(Poking a SBM Image): Fix typo.
	(Signed Weird Integers): Minor fix (s/byte/bit/).
	(How Structs are Built): Fix example.
	(Reserved fields): Likewise.
	(Setters and Getters): Likewise.
	(Loading pickles as Modules): Likewise.
	(Field Constraints): Likewise.
	(mem command): Explain invocation of .mem with no arg.

2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (mktya): Fix documentation.
	* libpoke/pkl-rt.pk (_Pkl_ClsN): New type.
	(_Pkl_ClsI): Likewise.
	(_Pkl_ClsO): Likewise.
	(_pkl_mkclsn): New function.
	(_pkl_mkclsi): Likewise.
	(_pkl_mkclso): Likewise.

2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-insn.def (isn): Remove instruction because we
	already have the `nnn' instruction.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/pkl-rt.pk (_pkl_print_format_any): Adapt.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (How `any' is handed in the PVM): New section.
	* HACKING: Regenerate.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c: Do not include pvm-program.h.

2022-10-27  Arsen Arsenović  <arsen@aarsen.me>

	* bootstrap.conf (libpoke_modules): Add set, xset and
	linkedhash-set.
	* libpoke/pkl-ast.c (pkl_ast_node_free): Allocate a visitation
	set, and move most code...
	(pkl_ast_node_free_1): ... to here, so that we can track and avoid
	freed nodes.  Also, no longer consult IS_RECURSIVE for lifetime
	information.
	* testsuite/poke.pkl/recursion-bad-1.pk: New test.
	* testsuite/poke.pkl/recursion-bad-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add the new tests.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Fix %destructors in parser): Removed as DONE.
	(Do not leak decl AST nodes in parser): Likewise.
